<resources>
    <string name="app_name" translatable="false">Story Apps</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_to_sign_in">Already have an account?</string>
    <string name="sign_in_to_sign_up">Don\'t have an account yet?</string>
    <string name="name_required">Name required</string>
    <string name="email_required">Email required</string>
    <string name="password_required">Password required</string>
    <string name="failed">Failed</string>
    <string name="sign_out">Sign Out</string>
    <string name="photo">Photo</string>
    <string name="add_new_story">Add New Story</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="loading">Wait still in process.!</string>
    <string name="detail_story">Detail Story</string>
    <string name="language">Language</string>
    <string name="insert_the_image_first">Insert the image first.</string>
    <string name="image_description_cannot_be_empty">Image description cannot be empty</string>
    <string name="not_getting_permission">Not getting permission.</string>
</resources>